<resources>
    <string name="app_name">AWI</string>
    <string name="text_spray">Siram</string>
    <string name="text_mode_auto">Otomatis</string>
    <string name="text_mode_auto_time">Waktu</string>
    <string name="text_mode_auto_sensor">Sensor</string>
    <string name="text_mode_manual">Manual</string>
    <string name="text_method_water">Air</string>
    <string name="text_method_ferti">Pupuk</string>
    <string name="text_stop_spray">Stop</string>
    <string name="text_initialize">Initialize</string>
    <string name="text_stop_initialize">Stop Initialize</string>
    <string name="text_mode">Mode</string>
    <string name="text_minimum_sensor">Kelembapan</string>
    <string name="text_auto_mode">Mode Otomatis</string>
    <string name="text_source">Sumber</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="text_water">Air</string>
    <string name="text_ferti">Pupuk</string>
    <string name="text_humidity">Kelembapan</string>
    <string name="text_left">Kiri</string>
    <string name="text_right">Kanan</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_water_status">Liter</string>
    <string name="text_water_label">Kapasitas Air</string>
    <string name="text_signal_status">ms</string>
    <string name="text_signal_label">Kekuatan Sinyal</string>
    <string name="text_status_label">Status</string>

    <string name="text_success">Berhasil</string>
    <string name="text_initialize_success">Koneksi Berhasil</string>
    <string name="text_failed">Gagal Terhubung, Silahkan Cek Koneksi Anda</string>

    <string name="text_title_bar_settings">Pengaturan</string>
    <string name="text_title_bar_time_settings">Pengaturan Waktu</string>
    <string name="text_title_bar_fertilizer_settings">Pengaturan Pupuk</string>

    <string name="text_menu_time_setting">Pengaturan Waktu</string>
    <string name="text_menu_fertilizer_setting">Pengaturan Pupuk</string>

    <string name="text_open_fertilizer">Isi Bak Pupuk</string>
    <string name="text_close_fertilizer">Hentikan Pengisian</string>
    <string name="text_success_open_fertilizer">Pengisian Pupuk Berhasil</string>
    <string name="text_success_close_fertilizer">Menghentikan Pengisian Pupuk</string>

    <string name="text_plus_hour">Tambah Waktu</string>
    <string name="text_min_hour">Hapus Waktu</string>
    <string name="text_hour_1">Atur Waktu 1</string>
    <string name="text_hour_2">Atur Waktu 2</string>
    <string name="text_hour_3">Atur Waktu 3</string>
    <string name="text_start_hour">Waktu Mulai</string>
    <string name="text_end_hour">Waktu Berhenti</string>
    <string name="text_min_time_active">Minimal Harus Ada 1 Waktu Yang Aktif</string>
    <string name="text_max_time_active">Maximal 3 Waktu Yang Aktif</string>

</resources>
